# DOIR

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  DOIR spec.md  core.interface.doir  doir.spec  driver.cpp  hello.cpp
cmake/: CloxPatch.cmake
scripts/: FetchPeg.cmake  flex-bison.cmake
src/: ECS.hpp  arb.int.algorithms.cpp  components.hpp  core.hpp  diagnostics.hpp  doir.cpp  fnv1a.hpp  lexer.hpp  main.c  module.hpp  parse_state.hpp  test.cpp  unicode_identifier_head.hpp  utility.hpp
src/Calculator/: CMakeLists.txt  calculator.cpp  calculator.hpp  calculator.l  calculator.y  driver.cpp
src/ECS/: adapter.hpp  component_id.hpp  ecs.h  ecs.hpp  entity.hpp  kanren.hpp  query.hpp  relational.hpp
src/JSON/: CMakeLists.txt  driver.cpp  json.cpp  json.hpp  json.l  json.y
src/Lox/: 3ac.cpp  CMakeLists.txt  driver.cpp  dump.cpp  interp.cpp  lox.cpp  lox.hpp  lox.l  lox.peg  lox.y  parse.cpp  sema.cpp  serialize.cpp
src/fp/: bitmask.h  dynarray.h  pointer.h
src/tests/: Calculator.hpp  ECS.all.cpp  ECS.cpp  ECS.hpp  calculator.all.cpp  calculator.cpp  calculatorFlexBison.unix.cpp  fp.tests.cpp  genjson.py  json5.all.cpp  json5.cpp  lox.all.cpp  tests.all.cpp  tests.cpp  tests.utils.hpp
src/tests/clox/: benchmark.cpp  bool.cpp  clox.hpp  hello.cpp  printf_redirect.cpp  printf_redirect.h
src/tests/flexbison/: calculator.l  calculator.tab.c  calculator.y  calculator.yy.c
src/tests/lox/: lox.AST.hpp  lox.hpp  lox.interp.cpp  lox.parse.hpp  lox.parse.tests.cpp  lox.print.cpp  lox.sema.cpp
src/tests/lox/nystrom/: assignment.cpp  benchmark.cpp  block.cpp  bool.cpp  call.cpp  for.cpp  function.cpp  if.cpp  logical_operator.cpp  number.cpp  operator.cpp  return.cpp  string.cpp  variable.cpp  while.cpp
src/utility/: profile.config.hpp  profile.hpp
tests/: 1_calculator.cpp  2_json.cpp  3_lox.cpp  CMakeLists.txt  ECS.all.cpp  ECS.cpp  benchmark_lox.cpp.bench  calculator.cpp  tests.all.cpp  tests.cpp  tests.utils.hpp
